apps/kube/argocd/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: argocd-route
    namespace: argocd
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - argo.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          timeouts:
              backendRequest: 3600s
          backendRefs:
              - name: argocd-gate
                port: 5678
