apps/kube/argocd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: argocd-ingress
    namespace: argocd
    annotations:
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
        nginx.ingress.kubernetes.io/permanent-redirect: 'https://kbve.com/dashboard'
        cert-manager.io/cluster-issuer: 'letsencrypt-http'
spec:
    ingressClassName: nginx
    rules:
        - host: argo.kbve.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: argocd-server
                            port:
                                number: 443
    tls:
        - hosts:
              - argo.kbve.com
          secretName: argocd-tls
